crates/rome_console/tests/markup/unclosed_element.stderr
error: unclosed element
 --> tests/markup/unclosed_element.rs:3:10
  |
3 |         <Emphasis>
  |          ^^^^^^^^
